[wheel]
universal = 1

[metadata]
description-file = README.rst

[flake8]
show-source = True
ignore = E711,E712,E721,N806,D
exclude =
    .git,
    .tox,
    .cache,
    .eggs
    __pycache__,
    build,
    dist,
    docs,
    scripts
    venv,
    *.pyc,
    *.egg-info,
max-line-length = 120
max-complexity = 10
import-order-style = smarkets
application-import-names = flake8

[tool:pytest]
minversion = 3.0
